--- a/dummy/package.json
+++ b/dummy/package.json
@@ -5,14 +5,15 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
-    "sails": "^1.5.9",
+    "@sailshq/connect-redis": "^6.1.3",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^6.1.2",
     "grunt": "1.0.4",
+    "sails": "^1.5.9",
     "sails-hook-grunt": "^5.0.0",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^3.0.0",
-    "@sailshq/connect-redis": "^6.1.3",
-    "@sailshq/socket.io-redis": "^6.1.2",
-    "@sailshq/lodash": "^3.10.3"
+    "sails-mongo": "^2.1.0"
   },
   "devDependencies": {
     "eslint": "5.16.0"
