--- a/dummy/package.json
+++ b/dummy/package.json
@@ -8,6 +8,7 @@
     "@sailshq/connect-redis": "^6.1.3",
     "@sailshq/lodash": "^3.10.3",
     "@sailshq/socket.io-redis": "^6.1.2",
+    "bcrypt": "^5.1.1",
     "grunt": "1.0.4",
     "sails": "^1.5.9",
     "sails-hook-grunt": "^5.0.0",
